# nukebread

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
nuke_setup/: init.py  menu.py
prompts/: system_prompt.md
scripts/: ingest_nk_folder.py  seed_patterns.py
src/nukebread/: __init__.py
src/nukebread/common/: constants.py  protocol.py  types.py
src/nukebread/plugin/: __init__.py  bridge.py  chat_backend.py  frame_grabber.py  menu.py  node_factory.py  panel.py  serializer.py  tool_registry.py
src/nukebread/server/: main.py  nuke_client.py
src/nukebread/server/rag/: __init__.py  api.py  embeddings.py  formats.py  nk_parser.py  schema.sql  store.py
src/nukebread/server/tools/: __init__.py  execution.py  graph_read.py  graph_write.py  project.py  vision.py
tests/: conftest.py  test_nk_parser.py  test_nuke_client.py  test_serializer.py  test_types.py
tests/mocks/: nuke_mock.py
