[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nukebread"
version = "0.1.0"
description = "Claude MCP server for The Foundry's Nuke"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
nukebread-server = "nukebread.server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nukebread"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
